# moose-chemical

./: .gitmodules  .travis.yml  FORMAT  Makefile  README.md  __init__.py  chem2moose.py  chemgv.py  chemviz.py  compartment.py  config.py  gv.py  gvmoose.py  index.html  main.py  notify.py  params.json  run.sh  run_gv.sh  run_test.sh  run_yaml.sh  setup.py  test.py  test.py.clean  test_gv.py  todo.txt  utils.py  yacml.py  yacml2moose.py
CaMKII/: animation_camkii.py  camkii.ymcl  camkii_ring.dot  main.py
_junkyard/: yacml.py
_models/: Makefile  README.md  camkii.py  reac_with_rate_constant_function.dot  reac_with_rate_constant_function.dot_out.dot  simple.dot  simple.yml  simple_2c.yml  simple_expr.yml
_models/CaMKII/systemc/: CMakeLists.txt  README
_tests/: simple_expr.yml  test_gv.py
backend/: chem_moose.py  chem_moose.py.clean  reaction.py
docs/: chemical_kinetics.tex  moose_chemical.lyx  moose_results.tex
graphviz/: graphviz_moose.py  gv.py  reaction.py
haskell/: run.sh  yacml.cf
kinetics/: test_solve.py
ksolve/: test_ksolve.py
loader/: chemviz.py
notebook/: reversible_reaction_multiple_subs_prds.ipynb  simple_reaction_1.ipynb  simple_reaction_irreversible.ipynb  simple_reaction_reversible.ipynb
parser/: parser.py  parser_ply.py  parser_yml.py  ply_lexer.py  ply_yacc.py  pre_processor.py
py_expression_eval/: __init__.py
reaction_scheme_reader/: chem_lexer.py  chem_parser.py  parsetab.py  test.py
sbml/: util_sbml.py
test/: reac_with_func.py  reac_with_func_two_prd.py  run_test.py  simple.dot.out.dot  simple.dot_out.dot  simple.yml  (+16 more)
(+27 files in other folders)
